# nn.c-uda

./: CMakeLists.txt  README.md  library.c  library.h  nn_lib.c  nn_lib.h  nn_lib_cuda.h
src/: cuda_kernels.cu  cuda_kernels.h  main.c  matrix.c  matrix.h  nn.c  nn.h  xor.c
